--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,23 @@
 
 
         <!-- Primary Meta Tags --> 
-        <title>Giselle Zatonyl Development Portfolio</title>
-        <meta name="title" content="Giselle Zatonyl Development Portfolio" />
-        <meta name="description" content="Giselle Zatonyl's Software Development Portfolio. See projects, demos and links." />
+        <title>Front End Scaffold!</title>
+        <meta name="title" content="Front End Scaffold" />
+        <meta name="description" content="Giselle Zatonyl's Front End Scaffold" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://dev.gisellezatonyl.com/" />
-        <meta property="og:title" content="Giselle Zatonyl Development Portfolio" />
-        <meta property="og:description" content="Giselle Zatonyl's Software Development Portfolio. See projects, demos and links." />
-        <meta property="og:image" content="https://res.cloudinary.com/delu9m4xu/image/upload/v1599207508/G-Dev/imgs/Link-Preview-01_rdblvp.jpg" />
+        <meta property="og:url" content="" />
+        <meta property="og:title" content="Front End Scaffold" />
+        <meta property="og:description" content="Giselle Zatonyl's Front End Scaffold" />
+        <meta property="og:image" content="public\assets\imgs\misc-bckg.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="http://dev.gisellezatonyl.com/" />
-        <meta property="twitter:title" content="Giselle Zatonyl Development Portfolio" />
-        <meta property="twitter:description" content="Giselle Zatonyl's Software Development Portfolio. See projects, demos and links." />
-        <meta property="twitter:image" content="https://res.cloudinary.com/delu9m4xu/image/upload/v1599207508/G-Dev/imgs/Link-Preview-01_rdblvp.jpg" />
+        <meta property="twitter:url" content="" />
+        <meta property="twitter:title" content="Front End Scaffold" />
+        <meta property="twitter:description" content="Giselle Zatonyl's Front End Scaffold" />
+        <meta property="twitter:image" content="public\assets\imgs\misc-bckg.png" />
 
     </head>
 
